Add deps target and put asset packaging example into bin folder when building

--- a/examples/asset_packaging/Makefile
+++ b/examples/asset_packaging/Makefile
@@ -1,8 +1,11 @@
 run:
 	go run main.go
 
+deps:
+	go get -u github.com/shurcooL/vfsgen
+
 build:
 	go generate
-	go build -tags=deploy_build -o app main.go
+	go build -tags=deploy_build -o bin/app main.go
 
-.PHONY: run build
+.PHONY: run build deps
