--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,12 +23,8 @@ build: off
 test_script:
   - go test -v ./...
   - cd examples/asset_packaging/
+  - go run main.go --run-and-exit
   - go get -u github.com/shurcooL/vfsgen
   - go generate
-  - go build -tags=deploy_build -o bin/app main.go
-  - cd bin
-  - ls -la
-  - START /B app.exe
-  - ps: $curl = curl http://localhost:9090
-  - ps: $curl
-  - ps: if ($curl.StatusCode -ne 200) { $host.SetShouldExit(1) }
+  - go build -tags=deploy_build -o bin/app.exe main.go
+  - .\bin\app.exe --run-and-exit
