Set GO111MODULE=on in AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ clone_folder: c:\gopath\src\github.com\CloudyKit\jet
 
 environment:
   GOPATH: c:\gopath
+  GO111MODULE: on
   matrix:
     - GOVERSION: 112
     - GOVERSION: 113
