run travis and appveyor with Go 1.13, 1.14, 1.15

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ environment:
   GO111MODULE: on
   matrix:
     - GOVERSION: 113
+    - GOVERSION: 114
+    - GOVERSION: 115
 
 install:
   - set PATH=%GOPATH%\bin;c:\go%GOVERSION%\bin;%PATH%
