--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: "{build}"
 
-os: Windows Server 2012 R2
+os: Windows Server 2019
 
 # scripts that are called at very beginning, before repo cloning
 init:
